WVI-33: Allow registration on external server via SAML module. Make "access" context use AuthnRequests. Upgrade several libraries to newer versions. General debuggin and cleaning.